fixing misaligned header

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1 {
 .weather-row div:first-child {
     flex: 2;
     text-align: center;
-    min-width: 150px; /* Ajust width for the date and day columns */
+    min-width: 100px; /* Ajust width for the date and day columns */
 }
 
 .temperature {
